fix some more styling issues

--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -15,7 +15,8 @@
     <p><i>“Pets are humanizing. They remind us we have an obligation and responsibility to preserve 
         and nurture and care for all life.”</i> – James Cromwell
     </p>
-    <img src="/static/css/bunny photo.webp" alt="">
+    <br>
+    <img src="/static/css/bunny photo.webp" alt="" class="responsive-bunny">
 </main>
 
 {% endblock %}
