--- a/main_app/templates/main_app/owner_form.html
+++ b/main_app/templates/main_app/owner_form.html
@@ -3,7 +3,7 @@
 
 <main class="container">
   {% if object %}
-    <h1>Edit <span class="teal-text">{{object.first_name}}</span></h1>
+    <h1>Edit <span>{{object.first_name}}</span></h1>
   {% else %}
     <h1>Create a Pet Owner Profile</h1>
   {% endif %}
