--- a/main_app/templates/main_app/pet_form.html
+++ b/main_app/templates/main_app/pet_form.html
@@ -3,7 +3,7 @@
 
 <main class="container">
   {% if object %}
-    <h1>Edit <span class="teal-text">{{object.name}}</span></h1>
+    <h1>Edit <span>{{object.name}}</span></h1>
   {% else %}
     <h1>Add a Pet Profile</h1>
   {% endif %}
