--- a/main_app/templates/owners/post_form.html
+++ b/main_app/templates/owners/post_form.html
@@ -3,7 +3,7 @@
 
 <main class="container">
   {% if user.owner.id %}
-    <h1>Owner: <span class="teal-text">{{owner.first_name}}</span></h1>
+    <h1>Owner: <span>{{owner.first_name}}</span></h1>
   {% else %}
     
   {% endif %}
