--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -4,6 +4,7 @@ body {
     flex-direction: column;
     font-family: 'Lato', sans-serif;
     min-height: 100vh;
+    font-size: 16px;
   }
   
 main {
@@ -22,7 +23,7 @@ nav {
 }
 
 .page-footer {
-    background-color:rgb(126, 125, 140);
+    background-color:#9A8C98;
 }
 
 .btn {
@@ -77,7 +78,10 @@ h4 {
     font-size: medium;
 }
 
-
+.responsive-bunny {
+    width: 100%;
+    height: auto;
+}
 
 /* Style Petcations */
 .flex-display {
@@ -136,7 +140,7 @@ h4 {
 
 /* Style Profile Pages */
 .profile-page {
-    width: 80%;
+    width: 75%;
 }
 
 .form-links {
@@ -149,8 +153,22 @@ h4 {
 
 .profile-image {
     border: 1px rgb(79, 83, 91) solid;
+    margin-top: 25px;
 }
 
 .pet-cards {
     margin: 10px;
+}
+
+.grid-display {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(128px, 1fr));
+    grid-gap: 0.75rem; /* To define the gap between rows/columns */
+    gap: 0.75rem;
+    padding: 0.75rem;
+}
+
+/* Style Pets Profile Page */
+.pets-detail-page {
+    margin-top: 50px;
 }
