--- a/main_app/templates/main_app/owner_confirm_delete.html
+++ b/main_app/templates/main_app/owner_confirm_delete.html
@@ -3,7 +3,7 @@
 
 <main class="container">
   <h1>Delete Owner Profile</h1>
-  <h4>Are you sure you want to delete <span class="teal-text">{{ object.first_name }}</span>?</h4>
+  <h4>Are you sure you want to delete <span>{{ object.first_name }}</span>?</h4>
   <form action="{% url 'owners_delete' owner.id %}" method="POST">
     {% csrf_token %}
     <input type="submit" value="Yes - Delete!" class="btn">
